# Gw2-WvW-Scrapper

./: .gitignore  Cargo.toml
db-adapter/: Cargo.toml
db-adapter/src/: db_adapter.rs  dynamo_adapter.rs  lib.rs  mongo_adapter.rs  postgres_adapter.rs
db-adapter/src/mongo_adapter/: models.rs
db-adapter/src/postgres_adapter/: models.rs
gw2-api-models/: Cargo.toml
gw2-api-models/src/models/: matchup_overview.rs  mod.rs
gw2-api-wrapper/: Cargo.toml
gw2-api-wrapper/src/: lib.rs
gw2-api-wrapper/src/models/: matchup_overview.rs
gw2-info-api/: Cargo.toml
gw2-info-api/src/: main.rs
gw2-info-persistence/: Cargo.toml
gw2-info-persistence/src/: dynamo_persistence.rs  file_system_persistence.rs  lib.rs  mongo_persistence.rs  oracle_persistence.rs  persistence_system_interface.rs  postgres_persistence.rs  redis_persistence.rs
gw2-wvw-scrapper/: Cargo.toml
gw2-wvw-scrapper/src/: main.rs
mongo-db-adapter/: Cargo.toml
oracle-db-adapter/: Cargo.toml
oracle-db-adapter/src/: lib.rs
pg-db-adapter/: Cargo.toml
pg-db-adapter/src/: lib.rs  models.rs
redis-conn-adapter/: Cargo.toml
redis-conn-adapter/src/: lib.rs
