[package]
name = "gw2-api-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_with = {version = "2.2.0", features = ["chrono_0_4", "macros", "json"]}
getset = {version = "0.1.2"}
chrono = {version = "0.4.23", features = ["serde"]}
