[package]
name = "gw2-info-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.151", features = ["derive"]}
bincode = {version = "1.3.3"}
serde_json = {version = "1.0.91"}

gw2-api-wrapper = {path = "../gw2-api-wrapper"}
