[package]
name = "gw2-info-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
bincode = {version = "1.3.3"}
serde_json = {version = "1.0.92"}
async-trait = {version = "0.1.64"}
tokio = {version = "1.25.0"}

gw2-api-models = {path = "../gw2-api-models"}
pg-db-adapter = {path = "../pg-db-adapter"}
