[package]
name = "gw2-wvw-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.25.0", features = ["full"]}
tokio-cron-scheduler = {version = "0.9.3"}

gw2-api-wrapper = {path = "../gw2-api-wrapper"}
gw2-info-persistence = {path = "../gw2-info-persistence"}
