[package]
name = "oracle-db-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = {version = "0.5.7", features = ["chrono"]}
tokio = {version = "1.25.0", features = ["full"]}
chrono = {version = "0.4.23"}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.96"}
dotenv = {version = "0.15.0"}

gw2-api-models = {path = "../gw2-api-models"}