[package]
name = "pg-db-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = {version = "0.7.7", features = ["with-serde_json-1", "with-chrono-0_4"]}
tokio = {version = "1.25.0", features = ["full"]}
chrono = {version = "0.4.23"}

gw2-api-models = {path = "../gw2-api-models"}
